Use openapi generator instead
