# api/openapi.yaml
@@ -1,11 +1,11 @@
 openapi: 3.0.0
 info:
-  title: Client Id Provider
-  description: Provide client ids for companies in order to use properitary auth and
-    cash flow
   contact:
     email: contact@gamytech.com
-  version: "1.0"
+  description: Provide client ids for companies in order to use properitary auth and
+    cash flow
+  title: Client Id Provider
+  version: 1.0.0
 servers:
 - url: http://localhost:3000
 tags:
@@ -13,16 +13,11 @@ tags:
 paths:
   /accounts:
     post:
-      tags:
-      - Accounts
-      summary: Sign up to the gamytech bridge platform
       description: Will create a new account for the bridge server
       operationId: createNewAccount
       requestBody:
         content:
           application/json:
-            schema:
-              $ref: '#/components/schemas/body'
             examples:
               JSON:
                 value:
@@ -30,13 +25,12 @@ paths:
                   lastname: string
                   company_name: string
                   email: user@example.com
+            schema:
+              $ref: '#/components/schemas/body'
       responses:
         "201":
-          description: Created
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Account'
               examples:
                 JSON:
                   value:
@@ -46,29 +40,30 @@ paths:
                     email: user@example.com
                     company_name: string
                     client_id: string
-      x-swagger-router-controller: Accounts
-  /accounts/{id}:
-    get:
+              schema:
+                $ref: '#/components/schemas/Account'
+          description: Created
+      summary: Sign up to the gamytech bridge platform
       tags:
       - Accounts
-      summary: Get by id
+      x-swagger-router-controller: Accounts
+      x-eov-operation-handler: controllers/AccountsController
+  /accounts/{id}:
+    get:
       description: Get a company account by id
       operationId: getAccountById
       parameters:
-      - name: id
+      - explode: false
         in: path
+        name: id
         required: true
-        style: simple
-        explode: false
         schema:
           type: string
+        style: simple
       responses:
         "200":
-          description: OK
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Account'
               examples:
                 JSON:
                   value:
@@ -78,19 +73,24 @@ paths:
                     email: user@example.com
                     company_name: string
                     client_id: string
+              schema:
+                $ref: '#/components/schemas/Account'
+          description: OK
+      summary: Get by id
+      tags:
+      - Accounts
       x-swagger-router-controller: Accounts
+      x-eov-operation-handler: controllers/AccountsController
 components:
   schemas:
     Account:
-      title: Account
-      required:
-      - client_id
-      - company_name
-      - email
-      - firstname
-      - id
-      - lastname
-      type: object
+      example:
+        firstname: firstname
+        company_name: company_name
+        id: 0.8008281904610115
+        email: ""
+        client_id: client_id
+        lastname: lastname
       properties:
         id:
           type: number
@@ -99,19 +99,21 @@ components:
         lastname:
           type: string
         email:
-          type: string
           format: email
+          type: string
         company_name:
           type: string
         client_id:
           type: string
-      example:
-        firstname: firstname
-        company_name: company_name
-        id: 0.80082819046101150206595775671303272247314453125
-        email: ""
-        client_id: client_id
-        lastname: lastname
+      required:
+      - client_id
+      - company_name
+      - email
+      - firstname
+      - id
+      - lastname
+      title: Account
+      type: object
       x-examples:
         JSON:
           id: 0
@@ -121,12 +123,6 @@ components:
           company_name: string
           client_id: string
     body:
-      required:
-      - company_name
-      - email
-      - firstname
-      - lastname
-      type: object
       properties:
         firstname:
           type: string
@@ -135,6 +131,12 @@ components:
         company_name:
           type: string
         email:
-          type: string
           format: email
+          type: string
+      required:
+      - company_name
+      - email
+      - firstname
+      - lastname
+      type: object
   securitySchemes: {}
