# controllers/Accounts.js
@@ -1,24 +1,0 @@
-'use strict';
-
-var utils = require('../utils/writer.js');
-var Accounts = require('../service/AccountsService');
-
-module.exports.createNewAccount = function createNewAccount (req, res, next, body) {
-  Accounts.createNewAccount(body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.getAccountById = function getAccountById (req, res, next, id) {
-  Accounts.getAccountById(id)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
